; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/w32-pthreads/tests/extr_barrier4.c_func.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/w32-pthreads/tests/extr_barrier4.c_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@barrier = common dso_local global i32 0, align 4
@mx = common dso_local global i32 0, align 4
@PTHREAD_BARRIER_SERIAL_THREAD = common dso_local global i32 0, align 4
@serialThreadCount = common dso_local global i32 0, align 4
@otherThreadCount = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"Barrier wait failed: error = %s\0A\00", align 1
@error_string = common dso_local global i8** null, align 8
@stdout = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @func(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %5 = call i32 @pthread_barrier_wait(i32* @barrier)
  store i32 %5, i32* %4, align 4
  %6 = call i64 @pthread_mutex_lock(i32* @mx)
  %7 = icmp eq i64 %6, 0
  %8 = zext i1 %7 to i32
  %9 = call i32 @assert(i32 %8)
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @PTHREAD_BARRIER_SERIAL_THREAD, align 4
  %12 = icmp eq i32 %10, %11
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = load i32, i32* @serialThreadCount, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* @serialThreadCount, align 4
  br label %32

16:                                               ; preds = %1
  %17 = load i32, i32* %4, align 4
  %18 = icmp eq i32 0, %17
  br i1 %18, label %19, label %22

19:                                               ; preds = %16
  %20 = load i32, i32* @otherThreadCount, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* @otherThreadCount, align 4
  br label %31

22:                                               ; preds = %16
  %23 = load i8**, i8*** @error_string, align 8
  %24 = load i32, i32* %4, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i8*, i8** %23, i64 %25
  %27 = load i8*, i8** %26, align 8
  %28 = call i32 @printf(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i8* %27)
  %29 = load i32, i32* @stdout, align 4
  %30 = call i32 @fflush(i32 %29)
  store i8* null, i8** %2, align 8
  br label %37

31:                                               ; preds = %19
  br label %32

32:                                               ; preds = %31, %13
  %33 = call i64 @pthread_mutex_unlock(i32* @mx)
  %34 = icmp eq i64 %33, 0
  %35 = zext i1 %34 to i32
  %36 = call i32 @assert(i32 %35)
  store i8* null, i8** %2, align 8
  br label %37

37:                                               ; preds = %32, %22
  %38 = load i8*, i8** %2, align 8
  ret i8* %38
}

declare dso_local i32 @pthread_barrier_wait(i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i32 @fflush(i32) #1

declare dso_local i64 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
